# dggrid4py

./: .gitignore  .readthedocs.yaml  CITATION.cff  DggridAlgorithmV1.py  Earthfile  README.md  _setup.py.bak  demo_dggrid.py  demo_highlevel_api.py  demo_lowlevel_api.py  dggrid_helpers.py  dggrid_runner.py  pyproject.toml  raster_sampling.py  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
dggrid4py/: __init__.py  auxlat.py  dggrid_runner.py  igeo7.py  igeo7_ext.py  interrupt.py  tool.py
docs/: requirements.txt
docs/source/: IGEO7.rst  api.rst  conf.py  index.rst  usage.rst
docs/source/dggrid4py/: dggrid4py.DGGRID.rst  dggrid4py.DGGRIDv7.rst  dggrid4py.DGGRIDv8.rst  dggrid4py.auxlat.rst  dggrid4py.dggrid_runner.rst  dggrid4py.igeo7.rst  dggrid4py.igeo7_ext.rst  dggrid4py.interrupt.rst  dggrid4py.rst  dggrid4py.tool.rst
examples/: DggridAlgorithmV1.py  demo_highlevel_api.py  igeo7_index.py  igeo7_res_9.gpkg
tests/: test_dggrid.py  test_example.py  test_legacy_driver_name.py
