[project]
name = "dggrid4py"
version = "0.5.3"
description = "a Python library to run highlevel functions of DGGRIDv7 and v8"
authors = [
  { name = "Alexander Kmoch", email = "alexander.kmoch@ut.ee" },
  { name = "Wai Tik Chan", email = "wai.tik.chan@ut.ee>" },
  { name = "Luís Moreira de Sousa", email = "luis.de.sousa@protonmail.ch" },
  { name = "Francis Charette-Migneault", email = "francis.charette-migneault@crim.ca" }
]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/allixender/dggrid4py"
homepage = "https://github.com/allixender/dggrid4py"
keywords = ["python", "GIS", "DGGS", "DGGRID", "hexagons", "grids", "spatial statistics", "IGEO7"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: GIS"
]
requires-python = ">=3.10, <4.0.0"

[tool.poetry.dependencies]
python = ">=3.10, <4.0.0"
numpy = ">=1.22.0, <3.0.0"
pandas = ">=1.4.0, <3.0.0"
fiona = ">=1.8.0, <2.0.0"
shapely = ">=1.8.0, <3.0.0"
geopandas = ">=0.9.0, <2.0.0"
pygeodesy = "^25.10.10"
pyogrio = "^0.11.1"



[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
# black = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.1.2, <8.3.0"
sphinx-rtd-theme = ">=1.3.0rc1, <4.0.0"
# myst-parser requires Python 3.10+
myst-parser = "^4.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
